--- a/index.html
+++ b/index.html
@@ -107,19 +107,31 @@
       </div>
     </div>
   </div>
-
-
+	
   <hr class="d-print-none"/>
 
   <hr class="d-print-none"/>
   <div class="work-experience-section px-3 px-lg-4">
     <h2 class="h3 mb-4">Work Experience Samples: </h2>
+  <div class="timeline-card timeline-card-primary card shadow-sm">
+        <div class="card-body">
+          <a href="DDE-Phase2-Document V1.1.xlsx" target="_blank"><div class="h5 mb-1">DDE-Phase2 Project (PM Role)<span class="text-muted h6"> at HDSaison</span></div></a>
+          <ul>
+			<li>Objective: optimize phase1, dealer intergrate</li>
+			<li>Project type: software outsourcing</li>
+			
+		  </ul>
+		  <a href="DDE-Phase2-Document V1.1.xlsx" target="_blank">Project Document link</a>
+          
+        </div>
+    </div>
+	  
     <div class="timeline-card timeline-card-primary card shadow-sm">
         <div class="card-body">
           <a href="https://dev.azure.com/hdsaison/_git/QATool" target="_blank"><div class="h5 mb-1">QA/QC Project (Full-stack Developer Role)<span class="text-muted h6"> at HDSaison</span></div></a>
           <ul>
 			<li>Features: evaluate quality of create loan application</li>
-			<li>Stack: bootstrap4, asp.net core, entity framework(orm), dapper(micro orm), mssql db</li>
+			<li>Stack: bootstrap4, asp.net core, entity framework(orm, code first approach), dapper(micro orm), mssql db</li>
 			
 		  </ul>
 		  <a href="https://dev.azure.com/hdsaison/_git/QATool" target="_blank">Sourcecode link</a>
