--- a/index.html
+++ b/index.html
@@ -113,6 +113,19 @@
   <hr class="d-print-none"/>
   <div class="work-experience-section px-3 px-lg-4">
     <h2 class="h3 mb-4">Work Experience Samples: </h2>
+	  
+<div class="timeline-card timeline-card-primary card shadow-sm">
+        <div class="card-body">
+          <a href="https://dev.azure.com/hdsaison/_git/QATool" target="_blank"><div class="h5 mb-1">Movi Intergration Project (Full-stack Developer Role)<span class="text-muted h6"> at HDSaison</span></div></a>
+          <ul>
+			<li>Features: Web Portal for Users; Rest Api - HDSaison Enpoint to receive credit limit & credit disbursement request; Update to Movi result; Submit to Lending Core via WebService; read data from Lending Core</li>
+			<li>Stack: bootstrap4, asp.net core, identity, entity framework(orm, code first approach), dapper(micro orm), mssql db, oracle db</li>
+			
+		  </ul>
+		  <a href="#" target="_blank">Sourcecode link</a>
+          
+   </div>	  
+	  
   <div class="timeline-card timeline-card-primary card shadow-sm">
         <div class="card-body">
           <a href="DDE-Phase2-Document V1.1.xlsx" target="_blank"><div class="h5 mb-1">DDE-Phase2 Project (PM Role)<span class="text-muted h6"> at HDSaison</span></div></a>
