--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 			
 		  </ul>
 		  <a href="#" target="_blank">Sourcecode link</a>
-          
+       </div>
    </div>	  
 	  
   <div class="timeline-card timeline-card-primary card shadow-sm">
